--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "youch-terminal": "^2.1.3"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.1.0",
     "@adonisjs/core": "^5.7.3",
     "@adonisjs/lucid": "^17.2.0",
     "@adonisjs/repl": "^3.1.10",
     "luxon": "^2.3.1",
     "pg": "^8.7.3",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
